Crash when using `shape-outside: shape(...)` https://bugs.webkit.org/show_bug.cgi?id=308649

Reviewed by Simon Fraser.

Extends the list of rejected <basic-shape> functions for `shape-outside` to also
include `shape()`.

Also adds style building time check so that any non-parser code paths that might try
to construct a `shape-outside` property value don't succeed.

Test: fast/shapes/shape-outside-floats/shape-outside-shape-function-crash.html
* LayoutTests/fast/shapes/shape-outside-floats/shape-outside-shape-function-crash-expected.txt: Added.
* LayoutTests/fast/shapes/shape-outside-floats/shape-outside-shape-function-crash.html: Added.
* Source/WebCore/css/parser/CSSPropertyParserConsumer+Motion.cpp:
* Source/WebCore/css/parser/CSSPropertyParserConsumer+Shapes.cpp:
* Source/WebCore/css/parser/CSSPropertyParserConsumer+Shapes.h:
* Source/WebCore/style/values/shapes/StyleShapeOutside.cpp:

Canonical link: https://commits.webkit.org/308286@main